# osu-ircbot-rust

./: .gitignore  Cargo.toml  README.md  charts.sqlite  last_room_id.txt
.github/workflows/: rust.yml
src/: bot.rs  charts.rs  commands.rs  config.rs  events.rs  main.rs  osu_api.rs  pp_calculator.rs
