[package]
name = "irc_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
irc = "0.15"
tokio = { version = "1", features = ["full", "rt-multi-thread"] }
futures = "0.3"
regex = "1.5"
rosu-pp = "1.1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
