[package]
name = "irc_bot"
version = "1.0.1"
edition = "2024"

[dependencies]
irc = "1.1.0"
tokio = { version = "1.46.1", features = ["full", "rt-multi-thread"] }
futures = "0.3.31"
regex = "1.11.1"
rosu-pp = "2.0.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
chrono = "0.4.41"
rusqlite = { version = "0.37.0", features = ["bundled"] }
